feat(auth): install oauth server bundle

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,12 +33,7 @@ services:
     env_file:
       - .env
     environment:
-      DB_CONNECTION: mysql
-      DB_HOST: mysql
-      DB_PORT: 3306
-      DB_DATABASE: ${MYSQL_DATABASE}
-      DB_USERNAME: ${MYSQL_USER}
-      DB_PASSWORD: ${MYSQL_PASSWORD}
+      DATABASE_URL: "mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:3306/${MYSQL_DATABASE}?serverVersion=8&charset=utf8mb4"
     user: ${LOCAL_USER}
 
 volumes:
