--- a/apps/api/config/packages/security.yaml
+++ b/apps/api/config/packages/security.yaml
@@ -6,6 +6,14 @@ security:
     providers:
         users_in_memory: { memory: null }
     firewalls:
+        api_token:
+            pattern: ^/api/token$
+            security: false
+        api:
+            pattern: ^/api
+            security: true
+            stateless: true
+            oauth2: true
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
